Fix inconsistent failure in Connector integration tests due to unassigned tasks (#516)